--- a/docs/eigen-emulators.qmd
+++ b/docs/eigen-emulators.qmd
@@ -17,15 +17,15 @@ jupyter: python3
 # Eigen-Emulators {#sec-eigen-emulators}
 
 In this section, we discuss the construction of fast \& accurate emulators for bound-state calculations.
-Given a (Hermitian) Hamiltonian $H(\params)$, we aim to find the solutions $\{E(\params), \ket{\psi(\params) }\}$ of the parametric Schrödinger Equation
+Given a (Hermitian) Hamiltonian $H(\params)$ parameterized by $\params$, we aim to find the solutions $\{E(\params), \ket{\psi(\params) }\}$ of the Schrödinger Equation
 $$
 \begin{equation} %\label{eq-generic_eigenvalue_problem}
     H(\params)\ket{\psi(\params)} = E(\params) \ket{\psi(\params)} ,
 \end{equation}
 $$ {#eq-generic_eigenvalue_problem}
-subject to the normalization $\braket{\psi(\params)|\psi(\params)} = 1$, in the parameter space $\params$.
+subject to the normalization $\braket{\psi(\params)|\psi(\params)} = 1$.
 The components of the vector $\params$ may be model parameters, such as the low-energy couplings of a nuclear EFT, or other parameters describing the system of interest [@Zhang:2021jmi;@Yapa:2022nnv].
-We consider here cases in which Equation @eq-generic_eigenvalue_problem can be solved with high fidelity, but doing so requires a significant amount of computing time, _e.g._, repeated calculations in the parameter space $\params$ for Monte Carlo sampling or optimization tasks are computationally demanding or even prohibitively slow.
+We consider here cases in which Equation @eq-generic_eigenvalue_problem can be solved with high fidelity, but doing so requires a significant amount of compute time. This compute time is compounded when repeated solutions are required throughout the parameter space, \eg, during optimization routines or Monte Carlo sampling.
 In the following, we will discuss how the Ritz variational principle and the Galerkin method can be used to construct rapid and reliable^[A _reliable_ emulator may not necessarily be required to be highly accurate, _e.g._, if the other uncertainties of the theoretical calculation dominate the overall uncertainty budget.] emulators that facilitate these calculations.
 
 
@@ -101,7 +101,7 @@ $$
 %\end{subequations}
 $$ {#eq-ritz_condition}
 where $\subspace{H}(\params) \equiv X^\dagger H(\params) X$ is the subspace-projected Hamiltonian and $\subspace{N} \equiv X^\dagger X$ the norm matrix in the snapshot basis.
-As opposed to $H(\params)$ in Equation~\eqref{eq:generic_eigenvalue_problem}, $\subspace{H}(\params)$ (and likewise $\subspace{N}$) is a $\nbasis \times \nbasis$ Hermitian matrix
+As opposed to $H(\params)$ in Equation @eq-generic_eigenvalue_problem, $\subspace{H}(\params)$ (and likewise $\subspace{N}$) is a $\nbasis \times \nbasis$ Hermitian matrix
 $$
 \begin{equation}
     %\renewcommand*{\arraystretch}{1.1}
@@ -224,13 +224,12 @@ Non-intrusive emulators include Gaussian processes @rasmussen2006gaussian, Dynam
 More details on this classification scheme can be found in Section 8 in Ghattas \& Willcox @ghattas_willcox_2021.
 
 The emulator's efficiency greatly benefits from moving all size-$\nsimulator$ operations into the offline stage, which can easily be achieved for Hamiltonians $H(\params)$ with an affine parameter dependence.
-Those operators,
+These affine operators can be expressed as a sum of products of parameter-dependent functions $h_n(\params)$ and parameter-independent operators $H_n$,
 $$
 \begin{equation} %\label{eq-H_affine}
-    H(\params) = \sum_n h_n(\params) H_n,
+    H(\params) = \sum_n h_n(\params) H_n.
 \end{equation}
 $$ {#eq-H_affine}
-can be expressed as a sum of products of parameter-dependent functions $h_n(\params)$ and parameter-in\-de\-pendent operators $H_n$.
 Note that the functions $h_n(\params)$ are only required to be smooth but not necessarily linear in $\params$.
 The affine parameter dependence in Equation @eq-H_affine then allows one to store the subspace-projected operators $\subspace{H}_n = X^\dagger H_n X$ separately up front in the offline phase, from which
 $$
@@ -585,7 +584,7 @@ plt.show()
 
 ```{python}
 #| label: fig-wave-function-residuals
-#| fig-cap: "Absolute residuals of the emulated wave functions (in fm$^{-1/2}$) based on the RBM and HO emulator as a function of $r$. The emulator results are compared to the exact solutions. See the main text for details."
+#| fig-cap: "Absolute residuals of the emulated wave functions (in fm$^{-1/2}$) based on the RBM and HO emulator as a function of $r$, with colors corresponding to those in Figure @fig-eigen-emulator-wavefunctions. The emulator results are compared to the exact solutions. See the main text for details."
 #| echo: false
 fig, ax = plt.subplots(figsize=(3.3, 2.5))
 for i in range(n_example):
@@ -704,7 +703,7 @@ plt.show()
 The absolute residuals at the validation points for each of the RBM, HO, and GP emulators are shown in Figures @fig-energy-residuals and @fig-radius-residuals for the energy and radius, respectively.
 Among these emulators, the GP emulators perform the worst, despite being trained on the values of the energies and radii themselves to perform this very emulation task.
 Furthermore, its ability to extrapolate beyond the support of its training data is often poor unless great care is taken in the design of its kernel and mean function (see Figures 1 and 2 in Reference @Konig:2019adq).
-The GP suffers from what, in other contexts, could be considered its strength: because it treats the high-fidelity system as a black box (although some information can be conveyed via physics-informed priors for the hyperparameters), it cannot use the structure of the high-fidelity system to its advantage.
+The GP suffers from what, in other contexts, could be considered its strength: because it treats the high-fidelity system as a black box, it cannot use the structure of the high-fidelity system to its advantage (although some information can be conveyed via physics-informed priors for the hyperparameters).
 Note that the point here is not that it is impossible to find some GP that can be competitive with other RBM emulators after using expert judgment and careful (_i.e._, physics-informed) hyperparameter tuning.
 Rather, we emphasize that with the reduced-order models, remarkably high accuracy is achieved _without_ the need for such expertise.
 
