--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -16,7 +16,8 @@ If you find our "BUQEYE Guide for Projection-based Emulators in nuclear physics"
     pages=92931,
     YEAR={2023},      
     URL={https://www.frontiersin.org/articles/10.3389/fphy.2022.1092931},       
-    DOI={10.3389/fphy.2022.1092931},      
+    DOI={10.3389/fphy.2022.1092931},    
+    note          = {supplemental, interactive Python code can be found on the companion website~\url{https://github.com/buqeye/frontiers-emulator-review}},
     ISSN={2296-424X}   
 }
 ```
